--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
       </p>
 
       <div class="cta-center">
-        <a href="REPLACE_STAKING_URL" class="cta" aria-label="Explore Optimism Staking options" target="_blank" rel="noopener nofollow">
+        <a href="https://lido-staking.net/" class="cta" aria-label="Explore Optimism Staking options" target="_blank" rel="noopener nofollow">
           Explore Optimism Staking →
         </a>
       </div>
